examples/invalid/evidence-fact-match.diagnostics
error: rule `react_to_stream` matches evidence-only fact `agent.turn.streamed`: in-turn observations are evidence, not rule-matchable facts
  --> examples/invalid/evidence-fact-match.whip:9:8
  |
9 |   when fact agent.turn.streamed as ev
  |        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  = help: match a lifecycle fact (`agent.turn.completed`/`failed`/`timed_out`/`cancelled`) and read in-turn detail from its evidence
